tests/negative/typecheck/decl.orng
fn main() -> Int
    let x = 4